[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-session-db"
version = "0.1.0"
description = "Parse Claude Code session JSONL transcripts into a Postgres archive"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "psycopg[binary]>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
csd = "claude_session_db.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_session_db"]
